# SteamScraping

./: .gitignore  ARCHITECTURE_PROPOSAL.md  MIGRATION_GUIDE.md  README.md  REFACTORING_COMPLETE.md  main.ipynb  main.py  pyproject.toml  requirements.txt  scraping.ipynb  scraping.py  setup.py  validate_data.py  visualization.ipynb  visualization.py
.github/workflows/: compress.yml  download-previous.yml  merge-release.yml  pipeline.yml  scrape-igdb.yml  scrape-rawg.yml  scrape-steamspy.yml  test-pipeline.yml  upload-release.yml
__marimo__/session/: main.py.json
_archived/: LegacyScraper.ipynb  scraping.py  visualization.ipynb  visualization.py  visualization_multi.py
actions/: run_igdb.py  run_rawg.py  run_steamspy.py
scripts/: test_progress.py  tmp_test_marimo.py
src/: BaseScraper.py  DataValidator.py  FileSystem.py  IGDBScraper.py  RAWGScraper.py  RateLimiter.py  SteamSpyScraper.py  __init__.py  data_integrity.py
src/actions/: run_igdb.py  run_rawg.py  run_steamspy.py
src/core/: __init__.py  rate_limiter.py  scraper.py
src/models/: __init__.py  types.py
src/scrapers/: __init__.py  steamspy.py
src/storage/: __init__.py  filesystem.py
src/validation/: __init__.py  integrity.py
test/: test_data_integrity.py
ui/: __init__.py  scraper.py  validator.py  visualization.py
