[project]
name = "steamscraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "marimo>=0.18.3",
    "tqdm>=4.67.1",
    "pandas>=2.2.2",
    "matplotlib>=3.8.0",
    "seaborn>=0.12.2",
    "ruff>=0.14.8",
    "mcp>=1.23.2",
    "auto-mix-prep>=0.2.0",
]
